<resources>
    <string name="app_name">Craft Master</string>
    <string name="app_name_mcm">Craft Master</string>
    <string name="title_setting">Settings</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="industrial_craft">Industrial Craft 2</string>
    <string name="button_wiki">Visit Wiki</string>
    <string name="durability">Durability</string>
    <string name="attack_damage">Attack damage</string>
    <string name="blocks">Items</string>
    <string name="instruments">Tools</string>
    <string-array name="transport">
        <item>Minecart</item>
        <item>Minecart with Furnace</item>
        <item>Minecart with Chest</item>
        <item>Minecart with TNT</item>
        <item>Minecart with Hopper</item>
        <item>Rail</item>
        <item>Powered Rail</item>
        <item>Activator Rail</item>
        <item>Detector Rail</item>
        <item>Boat</item>
        <item>Elytra</item>
        <item>Saddle</item>


    </string-array>
    <string-array name="redstone">

        <item>Wooden Door</item>
        <item>Iron Door</item>
        <item>Trapdoor</item>
        <item>Iron Trapdoor</item>
        <item>Pressure Plate</item>
        <item>Weighted Pressure Plate</item>
        <item>Button</item>
        <item>Tripwire Hook</item>
        <item>Trapped Chest</item>
        <item>Note Block</item>
        <item>Jukebox</item>
        <item>Piston</item>
        <item>Sticky Piston</item>
        <item>Redstone Torch</item>
        <item>Lever</item>
        <item>Glowstone</item>
        <item>Redstone Lamp</item>
        <item>Redstone Repeater</item>
        <item>Redstone Comparator</item>
        <item>Daylight Sensor</item>
        <item>Block of Redstone</item>
        <item>Redstone Dust</item>
        <item>Observer</item>
        <item>Hopper</item>
        <item>Dispenser</item>
        <item>Dropper</item>

    </string-array>
    <string name="potions">Potions</string>
    <string-array name="food_and_dyes">
        <item>Bowl</item>
        <item>Mushroom Stew</item>
        <item>Bread</item>
        <item>Sugar</item>
        <item>Cake</item>
        <item>Pumpkin Pie</item>
        <item>Cookie</item>
        <item>Golden Apple</item>
        <item>Melon (block)</item>
        <item>Melon Seeds</item>
        <item>Pumpkin Seeds</item>
        <item>Hay Bale</item>
        <item>Golden Carrot</item>
        <item>Beetroot Soup</item>
        <item>Rabbit Stew</item>
        <item>Mushroom</item>
        <item>Wheat</item>
        <item>Sugar Canes</item>
        <item>Apple</item>
        <item>Melon</item>
        <item>Beetroot</item>
        <item>Baked Potato</item>
        <item>Carrot</item>
        <item>Cooked Rabbit</item>
        <item>Raw Rabbit</item>

        <item>Bone Meal</item>
        <item>Light Gray Dye</item>
        <item>Gray Dye</item>
        <item>Rose Red</item>
        <item>Orange Dye</item>
        <item>Dandelion Yellow</item>
        <item>Lime Dye</item>
        <item>Light Blue Dye</item>
        <item>Cyan Dye</item>
        <item>Purple Dye</item>
        <item>Magenta Dye</item>
        <item>Pink Dye</item>
        <item>Dandelion</item>
        <item>Sunflower</item>
        <item>Poppy</item>
        <item>Blue Orchid</item>
        <item>Allium</item>
        <item>Azure Bluet</item>
        <item>Red Tulip</item>
        <item>Orange Tulip</item>
        <item>White Tulip</item>
        <item>Pink Tulip</item>
        <item>Oxeye Daisy</item>
        <item>Lilac</item>
        <item>Rose Bush</item>
        <item>Peony</item>
        <item>Cactus Green</item>
        <item>Steak</item>
        <item>Cooked Porkchop</item>
        <item>Cooked Mutton</item>
        <item>Fish</item>
        <item>Cooked Chicken</item>
        <item>Rotten Flesh</item>
        <item>Raw Porkchop</item>
        <item>Raw Chicken</item>
        <item>Raw Beef</item>
        <item>Raw Mutton</item>
        <item>Potato</item>
        <item>Ink Sac</item>
        <item>Chorus Fruit</item>
        <item>Cocoa Beans</item>
        <item>Egg</item>
        <item>Dried Kelp</item>

    </string-array>
    <string name="armor_and_weapon">Combat</string>
    <string name="mobs">Mobs</string>
    <string name="brewing_stand">Brewing Stand</string>
    <string-array name="biomes">

        <item>Ice Plains</item>
        <item>Ice Plains Spikes</item>
        <item>Cold Taiga</item>
        <item>Cold Taiga M</item>
        <item>Frozen River</item>
        <item>Cold Beach</item>
        <item>Extreme Hills</item>
        <item>Extreme Hills M</item>
        <item>Extreme Hills +</item>
        <item>Extreme Hills + M</item>
        <item>Taiga</item>
        <item>Taiga M</item>
        <item>Mega Taiga</item>
        <item>Mega Spruce Taiga</item>
        <item>Stone Beach</item>
        <item>The End</item>
        <item>Plains</item>
        <item>Sunflower Plains</item>
        <item>Forest</item>
        <item>Flower Forest</item>
        <item>Birch Forest</item>
        <item>Birch Forest M</item>
        <item>Roofed Forest</item>
        <item>Roofed Forest M</item>
        <item>Swampland</item>
        <item>Swampland M</item>
        <item>Jungle</item>
        <item>Jungle M</item>
        <item>Jungle Edge</item>
        <item>Jungle Edge M</item>
        <item>River</item>
        <item>Beach</item>
        <item>Mushroom Island</item>
        <item>Mushroom Island Shore</item>
        <item>Desert</item>
        <item>Desert M</item>
        <item>Savanna</item>
        <item>Savanna M</item>
        <item>Mesa</item>
        <item>Mesa (Bryce)</item>
        <item>Mesa Plateau F M</item>
        <item>Plateau</item>
        <item>Plateau M</item>
        <item>Hell (The Nether)</item>
        <item>Ocean</item>
        <item>Deep Ocean</item>
        <item>Hills</item>
        <item>Plains M</item>
        <item>Frozen Ocean</item>
        <item>Extreme Hills Edge</item>
        <item>The Void</item>


    </string-array>
    <string name="music_discs">Music Discs</string>
    <string name="achievements">Achievements</string>
    <string-array name="commands">


        <item>/help</item>
        <item>/list</item>
        <item>/me</item>
        <item>/tell</item>
        <item>/transferserver</item>
        <item>/trigger</item>
        <item>/wsserver</item>
        <item>/achievement &lt;give|take> &lt;name|*> [player]</item>
        <item>/blockdata 0 64 0 {Primary:3}</item>
        <item>/clear [player] [item] [data] [maxCount] [dataTag]</item>
        <item>/clone &lt;x1> &lt;y1> &lt;z1> &lt;x2> &lt;y2> &lt;z2> &lt;x> &lt;y> &lt;z> [maskMode] [cloneMode] [TileName] [dataValue|state]</item>
        <item>/difficulty &lt;difficulty></item>
        <item>/effect &lt;player> clear \n/effect &lt;player> &lt;effect> [seconds] [amplifier] [hideParticles]</item>
        <item>/enchant &lt;player> &lt;enchantment ID> [level]</item>
        <item>/entitydata &lt;entity> &lt;dataTag></item>
        <item>/execute &lt;entity> &lt;x> &lt;y> &lt;z> &lt;command …></item>
        <item>/fill &lt;x1> &lt;y1> &lt;z1> &lt;x2> &lt;y2> &lt;z2> &lt;block> [dataValue|state] [oldBlockHandling] [dataTag]</item>
        <item>/gamerule &lt;rule name> [value]</item>
        <item>/give &lt;player> &lt;item> [amount] [data] [dataTag]</item>
        <item>/kill</item>
        <item>/locate &lt;StructureType></item>
        <item><![CDATA[/particle <name> <x> <y> <z> <xd> <yd> <zd> <speed> [count] [mode] [player] [params …]]]></item>
        <item>/playsound &lt;sound> &lt;source> &lt;player> [x] [y] [z] [volume] [pitch] [minimumVolume]</item>
        <item>/replaceitem block &lt;x> &lt;y> &lt;z> &lt;slot> &lt;item> [amount] [data] [dataTag]</item>
        <item>/say &lt;message …></item>
        <item>/scoreboard</item>
        <item>/seed</item>
        <item>/setblock &lt;x> &lt;y> &lt;z> &lt;block> [dataValue|state] [oldBlockHandling] [dataTag]</item>
        <item>/setworldspawn &lt;x> &lt;y> &lt;z></item>
        <item>/spawnpoint &lt;player></item>
        <item>/spreadplayers &lt;x> &lt;z> &lt;spreadDistance> &lt;maxRange> &lt;respectTeams> &lt;player …></item>
        <item>/stats block &lt;x> &lt;y> &lt;z> clear &lt;stat>\n
/stats block &lt;x> &lt;y> &lt;z> set &lt;stat> &lt;selector> &lt;objective>\n
/stats entity &lt;selector2> clear &lt;stat>\n
/stats entity &lt;selector2> set &lt;stat> &lt;selector> &lt;objective></item>
        <item>/stopsound &lt;player> [source] [sound]</item>
        <item>/summon &lt;EntityName> [x] [y] [z] &lt;dataTag></item>
        <item>/teleport &lt;target entity> &lt;x> &lt;y> &lt;z> [&lt;y-rot> &lt;x-rot>]</item>
        <item>/tellraw &lt;player> &lt;raw json message</item>
        <item>/testfor &lt;player> [dataTag]</item>
        <item>/testforblock &lt;x> &lt;y> &lt;z> &lt;block> [dataValue|state] [dataTag]</item>
        <item>/testforblocks &lt;x1> &lt;y1> &lt;z1> &lt;x2> &lt;y2> &lt;z2> &lt;x> &lt;y> &lt;z> [mode]</item>
        <item>/time &lt;add|query|set> &lt;value></item>
        <item>/title &lt;player> clear\n/title &lt;player> reset\n/title &lt;player> title &lt;raw json title></item>
        <item>/toggledownfall</item>
        <item>/tp [target player] &lt;destination player>\n/tp [target player] &lt;x> &lt;y> &lt;z> [&lt;yaw> &lt;pitch>]</item>
        <item>/weather &lt;clear|rain|thunder> [duration]</item>
        <item>/worldborder add &lt;distance> [time]\n /worldborder center &lt;x> &lt;z>\n/worldborder damage amount &lt;damagePerBlock>\n/worldborder damage buffer &lt;distance>
        \n/worldborder get\n/worldborder set &lt;distance> [time]\n/worldborder warning distance &lt;distance>\n/worldborder warning time &lt;time></item>
        <item>/xp &lt;amount> [player]\n/xp &lt;amount>L [player]</item>
        <item>/ban &lt;play> [reason …]</item>
        <item>/ban-ip &lt;address|name> [reason …]</item>
        <item>/banlist ips\n/banlist players</item>
        <item>/debug &lt;start|stop></item>
        <item>/defaultgamemode &lt;mode></item>
        <item>/deop &lt;player></item>
        <item>/kick &lt;player> [reason …]</item>
        <item>/op &lt;player></item>
        <item>/pardon &lt;name>\n/pardon-ip &lt;address></item>
        <item>/setidletimeout &lt;Minutes until kick></item>

        <item>/whitelist add &lt;player>\n
/whitelist list\n
/whitelist off\n
/whitelist on\n
/whitelist reload\n
/whitelist remove &lt;player></item>
        <item>/publish</item>
        <item>/save-all [flush]</item>
        <item>/save-on</item>
        <item>/stop-on</item>

    </string-array>
    <string name="restores">Restores</string>
    <string name="stackable">Stackable</string>
    <string name="instrument">Instrument</string>
    <string name="recipe_craft">Crafting recipe</string>
    <string name="internet">For watching videos need Internet connection.</string>
    <string name="items">Items</string>
    <string name="attack_strength">Attack Strength</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="drop">Drop</string>
</resources>